2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop remaining comments mentioning shaping support.

	* src/wordseg.cpp (Usage):
	  - Drop commented codes mentioning 'winlatex' and 'maclatex'
	    options.

2017-11-06  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Drop unnecessary includes in C sources.

	* src/abswordseg.cpp:
	  - Drop "worddef.h", already included in "abswordseg.h"
	* src/wordseg.cpp:
	  - Drop unused <time.h>

2017-11-02  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update dictionary from thailatex GitHub.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt:
	  - Update dictionary from dehyphenated source for thailatex
	    hyphenation patterns (based on libthai 0.1.27).

2016-12-25  Theppitak Karoonboonyanan <theppitak@gmail.com>

	* NEWS:
	  === Version 0.5.5 ===

2016-12-15  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update dictionary from thailatex GitHub.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-geo.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt:
	* data/tdict-std-compound.txt:
	* data/tdict-std.txt:
	  - Update dictionary from dehyphenated source for thailatex
	    hyphenation patterns.

2016-12-15  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Include git-version-gen in tarball

	* Makefile.am:
	  - Add build-aux/git-version-gen to EXTRA_DIST.

2016-07-11  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Use versioning based on Git snapshot.

	* Makefile.am:
	  - Add dist-hook to generate VERSION file on tarball generation.
	* +build-aux/git-version-gen:
	  - Add script to generate version based on 'git describe'
	    if in git tree, or using VERSION file if in release tarball.
	* configure.ac: